--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,6 +2,10 @@
 // Fonts
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
+@import "mixins/index";
+
+
+@import "components/font-face";
 // Variables
 @import "variables";
 
@@ -11,3 +15,4 @@
 @import "components/main";
 @import "components/product";
 @import "components/comment";
+@import "components/forms";
