--- a/resources/assets/sass/components/_product.scss
+++ b/resources/assets/sass/components/_product.scss
@@ -14,6 +14,11 @@
     }
   }
   &--show {
+    &-title {
+      h1 { 
+        font-size: 24px;
+      }
+    }
     &-footer {
       background: #fff;
       padding: 0 2% 2%;
