Navbar using reactstrap.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,287 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);.app-wrapper {
+@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);.p-ms {
+  padding: 3.75px !important;
+}
+
+.pl-ms {
+  padding-left: 3.75px !important;
+}
+
+.pr-ms {
+  padding-right: 3.75px !important;
+}
+
+.pt-ms {
+  padding-top: 3.75px !important;
+}
+
+.pb-ms {
+  padding-bottom: 3.75px !important;
+}
+
+.m-ms {
+  margin: 3.75px !important;
+}
+
+.ml-ms {
+  margin-left: 3.75px !important;
+}
+
+.mr-ms {
+  margin-right: 3.75px !important;
+}
+
+.mt-ms {
+  margin-top: 3.75px !important;
+}
+
+.mb-ms {
+  margin-bottom: 3.75px !important;
+}
+
+.p-xs {
+  padding: 7.5px !important;
+}
+
+.pl-xs {
+  padding-left: 7.5px !important;
+}
+
+.pr-xs {
+  padding-right: 7.5px !important;
+}
+
+.pt-xs {
+  padding-top: 7.5px !important;
+}
+
+.pb-xs {
+  padding-bottom: 7.5px !important;
+}
+
+.m-xs {
+  margin: 7.5px !important;
+}
+
+.ml-xs {
+  margin-left: 7.5px !important;
+}
+
+.mr-xs {
+  margin-right: 7.5px !important;
+}
+
+.mt-xs {
+  margin-top: 7.5px !important;
+}
+
+.mb-xs {
+  margin-bottom: 7.5px !important;
+}
+
+.p-sm {
+  padding: 15px !important;
+}
+
+.pl-sm {
+  padding-left: 15px !important;
+}
+
+.pr-sm {
+  padding-right: 15px !important;
+}
+
+.pt-sm {
+  padding-top: 15px !important;
+}
+
+.pb-sm {
+  padding-bottom: 15px !important;
+}
+
+.m-sm {
+  margin: 15px !important;
+}
+
+.ml-sm {
+  margin-left: 15px !important;
+}
+
+.mr-sm {
+  margin-right: 15px !important;
+}
+
+.mt-sm {
+  margin-top: 15px !important;
+}
+
+.mb-sm {
+  margin-bottom: 15px !important;
+}
+
+.p-md {
+  padding: 30px !important;
+}
+
+.pl-md {
+  padding-left: 30px !important;
+}
+
+.pr-md {
+  padding-right: 30px !important;
+}
+
+.pt-md {
+  padding-top: 30px !important;
+}
+
+.pb-md {
+  padding-bottom: 30px !important;
+}
+
+.m-md {
+  margin: 30px !important;
+}
+
+.ml-md {
+  margin-left: 30px !important;
+}
+
+.mr-md {
+  margin-right: 30px !important;
+}
+
+.mt-md {
+  margin-top: 30px !important;
+}
+
+.mb-md {
+  margin-bottom: 30px !important;
+}
+
+.p-lg {
+  padding: 45px !important;
+}
+
+.pl-lg {
+  padding-left: 45px !important;
+}
+
+.pr-lg {
+  padding-right: 45px !important;
+}
+
+.pt-lg {
+  padding-top: 45px !important;
+}
+
+.pb-lg {
+  padding-bottom: 45px !important;
+}
+
+.m-lg {
+  margin: 45px !important;
+}
+
+.ml-lg {
+  margin-left: 45px !important;
+}
+
+.mr-lg {
+  margin-right: 45px !important;
+}
+
+.mt-lg {
+  margin-top: 45px !important;
+}
+
+.mb-lg {
+  margin-bottom: 45px !important;
+}
+
+.p-xl {
+  padding: 60px !important;
+}
+
+.pl-xl {
+  padding-left: 60px !important;
+}
+
+.pr-xl {
+  padding-right: 60px !important;
+}
+
+.pt-xl {
+  padding-top: 60px !important;
+}
+
+.pb-xl {
+  padding-bottom: 60px !important;
+}
+
+.m-xl {
+  margin: 60px !important;
+}
+
+.ml-xl {
+  margin-left: 60px !important;
+}
+
+.mr-xl {
+  margin-right: 60px !important;
+}
+
+.mt-xl {
+  margin-top: 60px !important;
+}
+
+.mb-xl {
+  margin-bottom: 60px !important;
+}
+
+.m-none {
+  margin: 0 !important;
+}
+
+.mb-none {
+  margin-bottom: 0 !important;
+}
+
+.mt-none {
+  margin-top: 0 !important;
+}
+
+.mr-none {
+  margin-right: 0 !important;
+}
+
+.ml-none {
+  margin-left: 0 !important;
+}
+
+.p-none {
+  padding: 0 !important;
+}
+
+.pb-none {
+  padding-bottom: 0 !important;
+}
+
+.pt-none {
+  padding-top: 0 !important;
+}
+
+.pr-none {
+  padding-right: 0 !important;
+}
+
+.pl-none {
+  padding-left: 0 !important;
+}
+
+.first-layer a {
+  color: #fff;
+}
+
+.app-wrapper {
   margin-top: 3.5em;
 }
