--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -24,6 +24,7 @@ $font-family-sans-serif: "Roboto", sans-serif;
 $font-size-base: 14px;
 $line-height-base: 1.6;
 $text-color: #636b6f;
+$font-size-small: 12px;
 
 // Navbar
 $navbar-default-bg: #fff;
