--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,5 +1,6 @@
 @import "~spectre.css/dist/spectre-exp.min.css";
 @import "~spectre.css/dist/spectre-icons.css";
 @import "~spectre.css/dist/spectre.min.css";
+@import "~loaders.css/loaders.css";
 @import "components/base.less";
 @import "components/login.less";
