Enhancing search feature

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -4,3 +4,6 @@
 @import "~loaders.css/loaders.css";
 @import "components/base.less";
 @import "components/login.less";
+@import "components/animation.less";
+@import "components/search.less";
+@import "components/regions.less";
