Replace to react

--- a/resources/assets/less/components/animation.less
+++ b/resources/assets/less/components/animation.less
@@ -27,6 +27,17 @@
 }
 
 
-.ball-clip-rotate-multiple > div {
+.ball-beat > div {
     background: #5764c6;
+}
+
+.loader-container {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+    height: 1px;
 }
