--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -7,3 +7,4 @@
 @import "components/animation.less";
 @import "components/search.less";
 @import "components/regions.less";
+@import "components/loaders.less";
